--- a/AirAsia-Interview/AirAsia-Interview/View/Base.lproj/Main.storyboard
+++ b/AirAsia-Interview/AirAsia-Interview/View/Base.lproj/Main.storyboard
@@ -85,6 +85,65 @@
             </objects>
             <point key="canvasLocation" x="476" y="133.5832083958021"/>
         </scene>
+        <!--Home View Controller-->
+        <scene sceneID="Rsv-b3-s8l">
+            <objects>
+                <viewController id="3G7-WP-ZRk" customClass="HomeViewController" customModule="AirAsia_Interview" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="sgl-6d-zfS">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="gXv-0I-SHO"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4vf-tH-swS" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1255" y="134"/>
+        </scene>
+        <!--Menu View Controller-->
+        <scene sceneID="3n3-2U-kYh">
+            <objects>
+                <viewController id="46L-6q-eFg" customClass="MenuViewController" customModule="AirAsia_Interview" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="sx6-JI-hMR">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1T9-23-uc1">
+                                <rect key="frame" x="166" y="90" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="USg-R2-hMZ">
+                                <rect key="frame" x="20" y="131" width="335" height="516"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="46L-6q-eFg" id="Jyw-37-MS3"/>
+                                    <outlet property="delegate" destination="46L-6q-eFg" id="0MA-iC-HaF"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="1T9-23-uc1" firstAttribute="top" secondItem="6il-h7-QGe" secondAttribute="top" constant="26" id="9qG-MT-BXD"/>
+                            <constraint firstItem="USg-R2-hMZ" firstAttribute="top" secondItem="1T9-23-uc1" secondAttribute="bottom" constant="20" id="M0p-xC-vhm"/>
+                            <constraint firstItem="USg-R2-hMZ" firstAttribute="leading" secondItem="6il-h7-QGe" secondAttribute="leading" constant="20" id="RTK-eV-ZBS"/>
+                            <constraint firstItem="6il-h7-QGe" firstAttribute="bottom" secondItem="USg-R2-hMZ" secondAttribute="bottom" constant="20" id="bm0-P0-vND"/>
+                            <constraint firstItem="1T9-23-uc1" firstAttribute="centerX" secondItem="6il-h7-QGe" secondAttribute="centerX" id="edi-en-bPk"/>
+                            <constraint firstItem="6il-h7-QGe" firstAttribute="trailing" secondItem="USg-R2-hMZ" secondAttribute="trailing" constant="20" id="ibD-ZD-qtY"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="6il-h7-QGe"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="wGD-bx-gpn"/>
+                    <connections>
+                        <outlet property="lblName" destination="1T9-23-uc1" id="cK3-7x-vy6"/>
+                        <outlet property="tblList" destination="USg-R2-hMZ" id="DAY-bR-XgE"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="07V-i6-Uiz" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3318" y="122"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="8Z7-wa-cjB">
             <objects>
@@ -102,6 +161,24 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="me9-zN-vZ4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-281" y="134"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="txQ-GD-8j9">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="WOb-3q-JGQ" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="R2V-jf-bGS">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="46L-6q-eFg" kind="relationship" relationship="rootViewController" id="ViZ-Ly-gbg"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="tuo-3m-Xux" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2484.8000000000002" y="122.33883058470765"/>
         </scene>
     </scenes>
 </document>
